New version of lab 6

--- a/06-bootstrapping.Rmd
+++ b/06-bootstrapping.Rmd
@@ -11,37 +11,29 @@ knitr::opts_chunk$set(
   class.error   = "Rout text-danger"
 )
 
+library(tidyverse)
+library(infer)
+
 set.seed(12222)
+
+kobe <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/kobe.csv")
+milgram <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/milgram.csv")
+milgram_replication <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/milgram_replication.csv")
 ```
 
 ```{r, echo=FALSE, out.width="100%"}
-knitr::include_graphics("img/trolley.jpg")
+knitr::include_graphics("img/milgram.png")
 ```
 
 In this session, we will get practice using R to find confidence intervals via bootstrapping.  As with our initial exposure to hypothesis testing in the previous session, this is meant as a "first contact" with the basics of the techniques.  In the first part, we will revisit the Kobe data to get a view of how resampling works, since this is the heart of the bootstrapping technique.  In the second part, we will use bootstrapping to create confidence intervals representing people's tendencies when making moral decisions.
 
-## Required packages
-
-Like last time, we will require both the `tidyverse` and `infer` packages for this session, so make sure to load both from R's library with the line below.
-
-```{r}
-library(tidyverse)
-library(infer)
-```
+To help with the later exercises, be sure to **download the worksheet for this session** by right-clicking on the following link and selecting "Save link as...": [Worksheet for Lab 6](https://raw.githubusercontent.com/gregcox7/StatLabs/main/worksheets/ws_lab06.Rmd).  Open the saved file in RStudio.
 
 ## What is Kobe's field goal percentage?
 
 Last time, we asked whether Kobe Bryant had a "hot hand" during the 2009 NBA finals.  We used randomization to test the null hypothesis that Kobe's chance of making a hit was the same regardless of whether his previous shot was a hit or not.
 
 This time we are just interested in what proportion of Kobe's shots actually make it in the basket.  The traditional basketball term for this is Kobe's "field goal percentage".  This constitutes a **population parameter** that we could label mathematically as $\pi_{\text{Kobe}}$.  The "population" here is all the shots Kobe ever attempted across his career.  The sample are the shots Kobe attempted during the 2009 NBA finals.  The sample yields a **point estimate** $\hat{p}_{\text{Kobe}}$ of the population parameter $\pi_{\text{Kobe}}$.
-
-### Load the data
-
-Run the following line of code to download the dataset consisting of every shooting attempt Kobe made during the 2009 NBA finals.  This is the same data we looked at last time:
-
-```{r}
-kobe <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/kobe.csv")
-```
 
 ### What is the point estimate?
 
@@ -56,15 +48,16 @@ kobe %>%
 ```
 
 ::: {.exercise}
-This is the chunk of code we used to find the observed *difference* in hit proportions last time, as a function of whether Kobe's previous shot was a hit or not:
+As a reminder, this is the chunk of code we used to find the observed *difference* in hit proportions last time, as a function of whether Kobe's previous shot was a hit or not:
 
 ```{r eval=FALSE}
 kobe %>%
     specify(shot ~ prev_shot, success = "H") %>%
-    calculate(stat = "diff in props", order = c("H", "M"))
+    calculate(stat = "diff in props", order = c("prev_H", "prev_M"))
 ```
 
-Compare the code from last time with the code we just used to find the proportion of Kobe's shots that were hits.  Note any similarities and differences and try to describe *why* those differences might be there.  *Hint:* consider that last time we had both an explanatory and response variable, but now we are only interested in a single (response) variable.
+a. Why do we *not* need to mention `prev_shot` when calculating the proportion of Kobe's hits?
+b. Why do we *not* need to set `order` when calculating the proportion of Kobe's hits?
 
 :::
 
@@ -76,18 +69,10 @@ Although our sample gives us a point estimate ($\hat{p}_{\text{Kobe}}$) of Kobe'
 
 #### A single resample
 
-To get a sense of how resampling works, let's again focus on a smaller number of shots from the 2nd quarter of the 1st game.  Like last time, the `filter` function let's us pull out just those few shots:
+As we've seen, "resampling" treats the original data as if it were a whole population.  By *sampling with replacement* from that imaginary population, we can simulate what a new sample from that same population might look like.  The following chunk of code resamples from Kobe's shots to produce a new sample of shots:
 
 ```{r}
 kobe %>%
-    filter(game == 1, quarter == 2)
-```
-
-The following chunk of code resamples from Kobe's shots during that quarter to produce a new sample of shots:
-
-```{r}
-kobe %>%
-    filter(game == 1, quarter == 2) %>%
     specify(response = shot, success = "H") %>%
     generate(reps = 1, type = "bootstrap")
 ```
@@ -97,13 +82,12 @@ The chunk of code below is what we used last time to generate a single "shuffle"
 
 ```{r eval = FALSE}
 kobe %>%
-    filter(game == 1, quarter == 2) %>%
     specify(shot ~ prev_shot, success = "H") %>%
     hypothesize(null = "independence") %>%
     generate(reps = 1, type = "permute")
 ```
 
-Compare that code from last time to the code we just used to do resampling.  Note any similarities and differences.  *Hint:* does it matter that when doing bootstrapping we do not have a "null hypothesis"?
+In your own words, explain why do we *not* need to include a `hypothesize` line when doing bootstrapping, like we did when using permutation to test a null hypothesis?
 
 :::
 
@@ -111,7 +95,6 @@ The final step in doing bootstrapping is to calculate the sample statistic---in 
 
 ```{r}
 kobe %>%
-    filter(game == 1, quarter == 2) %>%
     specify(response = shot, success = "H") %>%
     generate(reps = 1, type = "bootstrap") %>%
     calculate(stat = "prop")
@@ -119,19 +102,12 @@ kobe %>%
 
 #### Many resamples
 
-We can remove the `filter` line to generate a single bootstrap resample proportion based on the full data.
+The whole point of bootstrapping is to get a *range* of plausible values and so we will need more than one resample!  And like last time, we will want to get R to remember the proportions from each resample so we can use them later; we will call it `kobe_boot_dist`.
+
+The following chunk of code uses bootstrapping to produce a distribution of sample proportions, the variability of which mimics the sampling variability that was at work when generating our original observed sample:
 
 ```{r}
-kobe %>%
-    specify(response = shot, success = "H") %>%
-    generate(reps = 1, type = "bootstrap") %>%
-    calculate(stat = "prop")
-```
-
-Of course, the whole point of bootstrapping is to get a *range* of plausible values and so we will need more than one resample!  And like last time, we will want to get R to remember the proportions from each resample so we can use them later; we will call it `boot_dist`.  The following chunk of code uses bootstrapping to produce a distribution of sample proportions, the variability of which mimics the sampling variability that was at work when generating our original observed sample:
-
-```{r}
-boot_dist <- kobe %>%
+kobe_boot_dist <- kobe %>%
     specify(response = shot, success = "H") %>%
     generate(reps = 1000, type = "bootstrap") %>%
     calculate(stat = "prop")
@@ -140,7 +116,7 @@ boot_dist <- kobe %>%
 And like last time, we can use a histogram to get a nice visual summary of the bootstrap distribution:
 
 ```{r}
-boot_dist %>%
+kobe_boot_dist %>%
     visualize()
 ```
 
@@ -150,41 +126,19 @@ To find a confidence interval, we need to find the "middle" of the bootstrap dis
 
 The middle 95% is between two different *quantiles* of the bootstrap distribution.  Specifically, the 2.5% and 97.5% quantiles define the boundaries of the 95% confidence interval.  This is because they are the values for which 2.5% of the simulated proportions are below the interval and 2.5% of the simulated proportions are above the interval.  So, in total, 5% of the values are outside the interval meaning the remainder (95%) are inside it.
 
-We can find the relevant quantiles using our faithful `summarize` function, now applied to the bootstrap distribution:
+As with many things, R has some shortcuts!  The following code finds the 95% confidence interval, where we use `level` to set how wide we want the interval.  Note that we are putting the result under the label `kobe_boot_ci` so we can use it to help us visualize the interval:
 
 ```{r}
-boot_dist %>%
-    summarize(CI = quantile(stat, probs = c(0.025, 0.975)))
-```
-
-The list of numbers under `probs` gives the probabilities above, but in terms of proportions rather than percent (so `0.025` instead of 2.5%, for example).
-
-::: {.exercise}
-Modify the following code to get the boundaries of the **90% confidence interval**:
-
-```{r eval=FALSE}
-boot_dist %>%
-    summarize(CI = quantile(stat, probs = c(___, ___)))
-```
-
-a. What code did you use?
-b. What were the boundaries that you found?
-
-:::
-
-As with many things, R has some shortcuts!  The following code also finds the 95% confidence interval, where we use `level` to set how wide we want the interval.  Note that we are putting the result under the label `boot_ci` so we can use it to help us visualize the interval:
-
-```{r}
-boot_ci <- boot_dist %>%
+kobe_boot_ci <- kobe_boot_dist %>%
     get_confidence_interval(level = 0.95)
 ```
 
-Now we can add the 95% confidence interval that we saved under `boot_ci` to our visualization:
+Now we can add the 95% confidence interval that we saved under `kobe_boot_ci` to our visualization:
 
 ```{r}
-boot_dist %>%
+kobe_boot_dist %>%
     visualize() +
-    shade_confidence_interval(endpoints = boot_ci)
+    shade_confidence_interval(endpoints = kobe_boot_ci)
 ```
 
 ### Form a conclusion
@@ -192,147 +146,135 @@ boot_dist %>%
 Now we are in a position to form a conclusion about Kobe's true field goal percentage based on the sample that we had.
 
 ::: {.exercise}
-Answer the following based on the 95% confidence interval we just constructed for Kobe's field goal percentage.
+Answer the following based on the 95% confidence interval we just constructed for Kobe's field goal percentage.  (*Hint:* the visualization alone is enough to answer these questions.)
 
 a. Is it plausible that Kobe makes more than half of the shots he attempts?  Explain your reasoning.
-b. Kobe's actual career field goal percentage was 44.7%.  In other words, the true value of the population parameter was $\pi_{\text{Kobe}} = 0.447$.  Is this value contained within the 95% confidence interval?
+b. Kobe's actual career field goal percentage was 44.7%.  In other words, the true value of the population parameter was $\pi_{\text{Kobe}} = 0.447$.  Based on the 95% CI, are you surprised by this?  Explain your reasoning.
 
 :::
 
-## How willing are people to sacrifice one life to save many?
+## How willing are people to obey commands that endanger someone's life?
 
-It is a [well-known Vulcan dictum](https://youtu.be/v1mE_lyVKRQ?t=100) that the needs of the many outweigh the needs of the few (or the one).  But what may be true for Vulcans is not necessarily morally acceptable for humans.  Moreover, even a human who endorses the basic logic that it is better to save more lives than fewer lives may not be willing to put that logic into practice.  Fortunately, we are rarely put into situations where we would have to make that choice.
+Stanley Milgram conducted a now (in)famous experiment in 1963 into the nature of obedience.  The experiment was part of a line of research motivated by the experiences of the Holocaust.  During the Holocaust, which began during the 1930s and continued until the end of the second world war in 1945, Nazi Germany and its allies engaged in the systematic extermination of millions of people from a variety of ethnic, cultural, and sexual minorities.  A vast bureaucracy was set up to coordinate murder on such a massive scale.  As @Milgram1963 said,
 
-Philosophers and psychologists have studied moral decision making in many ways.  One way is by asking people what they would do in a hypothetical scenario.  A common scenario is called the "Trolley problem":
+> Gas chambers were built, death camps were guarded, daily quotas of corpses were produced with the same efficiency as the manufacture of appliances. These inhumane policies may have originated in the mind of a single person, but they could only be carried out on a massive scale if a very large number of persons obeyed orders.
 
-> A man in blue is standing by the railroad tracks when he notices an empty trolley car rolling out of control. It is moving so fast that anyone it hits will die. Ahead on the main track are five people. There is one person standing on a side track that doesn't rejoin the main track. If the man in blue does nothing, the trolley will hit the five people on the main track, but not the one person on the side track. If the man in blue flips a switch next to him, it will divert the trolley to the side track where it will hit the one person, and not hit the five people on the main track.
+The question that laid heavy on Milgram's mind, as well as those of his contemporaries, was why so many otherwise ordinary people would participate in murdering people who, in other circumstances, might have been their neighbors.  Milgram's experiment focused on one potential explanation: that people may have a strong tendency to *obey* authority figures, even when doing so violates their own personal morality.
 
-What should the man in blue do?  Should he sacrifice the one person on the side track to save the five people on the main track?  Or should he do nothing, leaving the five people on the main track to their fate?  @AwadEtAl2020 presented scenarios like this to a very large group of people from all over the world (roughly 70,000), with the aim of studying how different cultural backgrounds might influence people's moral judgments.
+@Milgram1963 studied this using an experiment in which a participant, which he calls a "naive subject" ("naive" here means "not aware of the purpose of the experiment") is ordered "to administer electric shock to a victim."  He describes the experimental setup:
 
-They presented a few different versions of the Trolley problem.  One was like the description above, in which the man in blue only has to flip a switch.  A different version went like this:
+> A simulated shock generator is used, with 30 clearly marked voltage levels that range from 15 to 450 volts. The instrument bears verbal designations that range from Slight Shock to Danger: Severe Shock. The responses of the victim, who is a trained confederate of the experimenter, are standardized. The orders to administer shocks are given to the naive subject in the context of a "learning experiment" ostensibly set up to study the effects of punishment on memory. As the experiment proceeds the naive subject is commanded to administer increasingly more intense shocks to the victim, even to the point of reaching the level marked Danger: Severe Shock.
 
-> A man in blue is standing on a footbridge over the railroad tracks when he notices an empty trolley car rolling out of control. It is moving so fast that anyone it hits will die. Ahead on the track are five people. There is a large person standing near the man in blue on the footbridge, and this large person weighs enough that the trolley would slow down if it hit him (the man in blue does not weigh enough to slow down the trolley). If the man in blue does nothing, the trolley will hit the five people on the track. If the man in blue pushes the one person, that one person will fall onto the track, where the trolley will hit the one person, slow down because of the one person, and not hit the five people farther down the track.
+The setup of the experiment is shown as the title image for today's session, where "T" is the participant, "E" is the Experimenter, and "L" is the "victim" who is supposedly being shocked.
 
-In this second version, called the "footbridge" version, the man in blue has to take a much more active role, literally throwing another person on the tracks to save the other five.  In a sense, though, it amounts to the same question: should the man in blue sacrifice one person to save five other people?
+For this session, we will examine data from one of Milgram's original experiments as well as a more recent *replication* of the experiment.  In both cases, the **response variable** is whether or not a participant continued to obey commands to shock the "victim" past the "danger" mark.
 
-These pictures, provided by @AwadEtAl2020, depict the scenarios corresponding to the two different versions of the Trolley problem:
+### Milgram's original study
 
-```{r, echo=FALSE, out.width="50%", fig.align='center'}
-knitr::include_graphics("img/trolley_scenarios.png")
-```
-
-In this section, we will look at the judgments @AwadEtAl2020 obtained from people and see whether a majority would be willing to sacrifice one life to save five in each of these scenarios.
-
-### Load the data
-
-Let's load the relevant data collected by @AwadEtAl2020 with the following line of code:
-
-```{r}
-trolley <- read_csv("https://raw.githubusercontent.com/gregcox7/StatLabs/main/data/trolley.csv")
-```
-
-For our purposes, these are just the data from people living in the USA, but this is still quite a large sample!  Now that the `trolley` data has appeared in RStudio's environment pane (in the upper right), click on it to explore the structure of the data.
-
-### What is the point estimate? {#calc-prop}
-
-First, let's get the point estimate for the proportion of people who would sacrifice someone.  We will do this separately for each version of the Trolley problem, making use of the `filter` function like we did for Kobe's data above.
-
-The **response variable** is `Sacrifice` which is either "Yes" or "No".  For our purposes, we will call "Yes" a "success" (though of course it is arguable whether either option in the Trolley problem should be considered a "success").
+The data from Milgram's original study are loaded into R's environment under the name `milgram`.
 
 ::: {.exercise}
-The code below provides a starting point for you to find the point estimates of the proportion of people in each scenario who would sacrifice someone to save five others.
+
+Use the chunk of code below to generate 1000 simulated datasets based on Milgram's study and visualize the 95% confidence interval.
 
 ```{r eval = FALSE}
-trolley %>%
-    filter(Scenario == "___") %>%
-    specify(response = ___, success = "___") %>%
-    calculate(stat = "___")
-```
-
-a. What is the proportion of people in the sample in the "Switch" scenario who chose to sacrifice someone to save five others?
-b. What is the proportion of people in the sample in the "Footbridge" scenario who chose to sacrifice someone to save five others?
-
-:::
-
-### Model the randomness
-
-Now we need to model the randomness involved in sampling variability to get bootstrap distributions of the proportions of people who recommend sacrificing in each scenario.  Generate **1000** bootstrap resamples for each scenario.
-
-::: {.exercise}
-The code below provides a starting point for you to use bootstrapping to obtain a distribution of the sample proportions we *could have* gotten due to sampling variability.  Notice that this will save the two bootstrap distributions under two different names, `boot_dist_switch` and `boot_dist_footbridge`.  If all goes well, these will appear in your RStudio environment pane, but otherwise you won't see anything at the console.
-
-```{r eval = FALSE}
-boot_dist_switch <- trolley %>%
-    filter(Scenario == "___") %>%
+milgram_boot_dist <- ___ %>%
     specify(response = ___, success = "___") %>%
     generate(reps = ___, type = "___") %>%
     calculate(stat = "___")
 
-boot_dist_footbridge <- trolley %>%
-    filter(Scenario == "___") %>%
-    specify(response = ___, success = "___") %>%
-    generate(reps = ___, type = "___") %>%
-    calculate(stat = "___")
-```
-
-What code did you use to generate the two bootstrap distributions?
-
-:::
-
-### Create the intervals
-
-Now that you've created your bootstrap distributions, use the following code as a starting point to generate 95% confidence intervals for each.  *Hint:* remember the names we gave to the bootstrap distributions in the previous exercise; also recall that `level` should be a number between 0 and 1, rather than a percentage.
-
-```{r eval = FALSE}
-boot_ci_switch <- ___ %>%
+milgram_ci <- milgram_boot_dist %>%
     get_confidence_interval(level = ___)
 
-boot_ci_footbridge <- ___ %>%
-    get_confidence_interval(level = ___)
-```
-
-Finally, you can use the following code outline to visualize either of the two distributions by filling in the blanks with the appropriate `boot_dist_` and `boot_ci_`.
-
-```{r eval = FALSE}
-___ %>%
+milgram_boot_dist %>%
     visualize() +
-    shade_confidence_interval(endpoints = ___)
+    shade_confidence_interval(endpoints = milgram_ci)
 ```
 
-::: {.exercise}
---
-
-a. What is the 95% confidence interval for the proportion who choose to sacrifice in the "Switch" scenario?
-a. What is the 95% confidence interval for the proportion who choose to sacrifice in the "Footbridge" scenario?
+Based on the confidence interval you found (you can see the exact numbers if you click on `milgram_ci` in R's **Environment** window after running your code), what can you say about the proportion of people in general who would be willing to risk someone's life out of obedience?
 
 :::
 
-### Form a conclusion
+### A more recent replication
 
-```{r echo = FALSE}
-boot_dist_switch <- trolley %>%
-    filter(Scenario == "Switch") %>%
-    specify(response = Sacrifice, success = "Yes") %>%
-    generate(reps = 1000, type = "bootstrap") %>%
-    calculate(stat = "prop")
+It is reasonable to believe that societal attitudes toward authority have changed since the 1960's.  One reason for this shift in attitudes is that people became aware of Milgram's work.  As such, it would be interesting to *replicate* Milgram's experiment to see whether this shift in attitudes has reduced the proportion of people who would continue to obey.
 
-boot_dist_footbridge <- trolley %>%
-    filter(Scenario == "Footbridge") %>%
-    specify(response = Sacrifice, success = "Yes") %>%
-    generate(reps = 1000, type = "bootstrap") %>%
-    calculate(stat = "prop")
+The participants in Milgram's experiments---i.e., the people commanded to issue shocks, not the actor who played the "victim"---experienced considerable stress.  For example, @Milgram1963 says that, "[f]ull-blown, uncontrollable seizures were observed for 3 subjects. On one occasion we observed a seizure so violently convulsive that it was necessary to call a halt to the experiment."  Despite these horrible reactions, these participants still obeyed the command to increase the level of shock.
 
-boot_ci_switch <- boot_dist_switch %>%
-    get_confidence_interval(level = 0.95)
+Because of the horrific effects on the participants, it would be impossible to replicate Milgram's procedure exactly in an ethical way.  @Burger2009 got as close as one could get.  First, Burger screened his participants beforehand to ensure that they did not have risk factors that would lead to the kind of extreme reactions described above.  Second, although Burger's fake electric shock machine looked the same as Milgram's, the experiment would stop before reaching any dangerous setting.  Even if a participant obeyed the command to increase the voltage past a certain point, the experiment would stop before any "shock" was applied.  As a result, participants never thought that they were inflicting any more than mild discomfort.  Even so, Burger's experiment allows us to measure whether someone was *willing* to continue the shocks.
 
-boot_ci_footbridge <- boot_dist_footbridge %>%
-    get_confidence_interval(level = 0.95)
-```
-
-Now it is time to interpret the confidence intervals we just found in the context of the particular research scenario.
+The data from Burger's replication is loaded into R under the name `milgram_replication`.
 
 ::: {.exercise}
-What do the confidence intervals you just found tell us about the proportion of people in the US population who would recommend sacrificing one life to save five?  Does this proportion seem to depend on the specifics of the scenario (i.e., whether it is the "Switch" or "Footbridge" version)?  For each version, could we say that more than half of the population would recommend sacrificing one person to save five?
+
+Fill in the blanks in the following chunk to calculate the proportion of participants in Burger's replication who continue to obey the experimenter.
+
+```{r eval = FALSE}
+milgram_replication %>%
+    specify(response = ___, success = "___") %>%
+    calculate(stat = "___")
+```
+
+a. Does this proportion fall inside or outside the 95% confidence interval you found for Milgram's original experiment (in the previous exercise)?
+b. What does your answer to part [a] suggest about whether attitudes toward obedience have changed between 1963 and 2009?  Explain your reasoning.
+
+:::
+
+::: {.exercise}
+
+Fill in the blanks in the chunk of code to repeat the analysis you performed on Milgram's original data (called `milgram`) with the more recent replication (called `milgram_replication`).  *Hint:* As usual, you will be able to re-use a lot of code!
+
+```{r eval = FALSE}
+milgram_replication_boot_dist <- ___ %>%
+    specify(response = ___, success = "___") %>%
+    generate(reps = ___, type = "___") %>%
+    calculate(stat = "___")
+
+milgram_replication_ci <- milgram_replication_boot_dist %>%
+    get_confidence_interval(level = ___)
+
+milgram_replication_boot_dist %>%
+    visualize() +
+    shade_confidence_interval(endpoints = milgram_replication_ci)
+```
+
+a. What is the 95% confidence interval you found?  (You can see the raw numbers by clicking on `milgram_replication_ci` after running your code.)
+b. This is how Milgram described his sample: *"The subjects were 40 males between the ages of 20 and 50, drawn from New Haven [Connecticut] and the surrounding communities...subjects were postal clerks, high school teachers, salesmen, engineers, and laborers. Subjects ranged in educational level from one who had not finished elementary school, to those who had doctorate and other professional degrees."*  Burger's sample also includes a range of educational experiences, but is comprised of 18 men and 22 women who range in age between 20 and 81 years old.  Do you think the 95% CI from Milgram's original study or the one from Burger's replication gives a better description of where the true population proportion probably is?  Explain your reasoning.
+
+:::
+
+### Do men and women differ in their proportions of obedience?
+
+A major difference between Milgram's original study and Burger's replication is that Burger's sample contains both men and women.  This allows us to address a **research question**: *Do men and women differ in their tendency toward obedience in this situation?*
+
+::: {.exercise}
+
+Fill in the blanks in the code below to use random permutation to test the *null hypothesis* that men and women *do not differ* in the proportion who obey.
+
+* For the `specify` lines:  The **response variable** is still `obeyed`, but now we have an **explanatory variable** which is labeled `gender`.
+* For the blanks in the `hypothesize`, `generate`, and `calculate` lines: look up how we set those in the previous activity.
+* For the `direction` lines:  There are three possible settings: `direction = "less"`, `direction = "greater"`, or `direction = "two-sided"`.  Set it to the `direction` in which results would be considered "extreme" if the null hypothesis were true.
+
+```{r eval = FALSE}
+milgram_replication_null_dist <- milgram_replication %>%
+    specify(___ ~ ___, success = "Yes") %>%
+    hypothesize(null = "___") %>%
+    generate(reps = 1000, type = "___") %>%
+    calculate(stat = "___", order = c("Male", "Female"))
+
+milgram_replication_obs_diff <- milgram_replication %>%
+    specify(___ ~ ___, success = "Yes") %>%
+    calculate(stat = "___", order = c("Male", "Female"))
+
+milgram_replication_p_value <- milgram_replication_null_dist %>%
+    get_p_value(obs_stat = milgram_replication_obs_diff, direction = "___")
+
+milgram_replication_null_dist %>%
+    visualize() +
+    shade_p_value(obs_stat = milgram_replication_obs_diff, direction = "___")
+```
+
+Based on the results you obtained, would you reject the null hypothesis?  (You can check out the $p$ value by clicking on `milgram_replication_p_value` in R's **Environment** window after running your code.)  What does the result of this hypothesis test say about whether men and women differ in their tendency to obey commands that potentially endanger someone's life?
 
 :::
 
