--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,23 @@
+@Article{Milgram1963,
+    author = {Stanley Milgram},
+    title = {Behavioral Study of Obedience},
+    journal = {Journal of Abnormal and Social Psychology},
+    year = 1963,
+    volume = 67,
+    number = 4,
+    pages = {371--378}
+}
+
+@Article{Burger2009,
+    title = {Replicating Milgram: Would People Still Obey Today?},
+    author = {Jerry M. Burger},
+    year = 2009,
+    journal = {American Psychologist},
+    volume = 11,
+    number = 1,
+    pages = {1--11}
+}
+
 @Article{JamesEtAl2015,
     author = {Ella L. James and Michael B. Bonsall and Laura Hoppitt and Elizabeth M. Tunbridge and John R. Geddes and Amy L. Milton and Emily A. Holmes},
     title = {Computer Game Play Reduces Intrusive Memories of Experimental Trauma via Reconsolidation-Update Mechanisms},
